# Lumiverse

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  api (13).json  bugs.md  bunfig.toml  docker-compose.build.yml  docker-compose.yml  docker-entrypoint.sh  flake.nix  package-lock.json  package.json  start.ps1  start.sh  tsconfig.tsbuildinfo
.github/: PULL_REQUEST_TEMPLATE.md
desktop/: README.md  custom-url.html  index.html  package.json  vite.config.ts  widget.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  floating-widget-poc.json  frontend-titlebar.json  tray-dev.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: tray-commands.toml
desktop/src-tauri/src/: dashboard.rs  frontend.rs  lib.rs  main.rs  runner.rs
developer-docs/: zensical.toml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
scripts/: analyze-taglibrary.ts  backfill-character-world-book-ownership.ts  bench-message-tag-interceptors.ts  bench-regex-captures.ts  bench-regex-social-links.ts  debug-hero.ts  diagnose-input.ts  input.ts  install-smartctl.ts  reset-password.ts  runner.ts  runner.tsx  setup-wizard.ts
src/: app.ts  env.ts  index.ts  lancedb-preflight.ts  main.ts
src/ws/: bus.ts  (+3 more)
tests/: botbooru-url.test.ts  dockerfile-runtime-layout.test.ts  dry-run-reasoning.test.ts  frontend-theme-engine.test.ts  generation-stop.test.ts  image-gen-config-transfer.test.ts  mcp-stdio-policy.test.ts  multiplayer-remote.test.ts  multiplayer-ws.test.ts  multiplayer.test.ts  prompt-block-character-tags.test.ts  temporary-chats.test.ts  user-data-export-roundtrip.test.ts  user-data-import-extraction.test.ts  user-data-import-large-benchmark.test.ts  user-data-import-upload.test.ts
(+1832 files in other folders)
